@@ -33,12 +33,18 @@ What's New in astroid 3.3.8?
 ============================
 Release date: TBA
 
+* Fix inability to import `collections.abc` in python 3.13.1. The reported fixes in astroid 3.3.6
+  and 3.3.7 did not actually fix this issue.
+
+  Closes pylint-dev/pylint#10112
 
 
 
 What's New in astroid 3.3.7?
 ============================
 Release date: 2024-12-20
+
+This release was yanked.
 
 * Fix inability to import `collections.abc` in python 3.13.1. The reported fix in astroid 3.3.6
   did not actually fix this issue.
